compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__arithmetic_operators_generate.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn get_int() -> i32;\nfn get_uint() -> u32;\n\nfn test() {\n    let sx = get_int();\n    let sy = get_int();\n    let ux = get_uint();\n    let uy = get_uint();\n\n    // TEST: should create an `add i32` instruction\n    let s_add = sx + sy;\n    let u_add = ux + uy;\n\n    // TEST: should create a `sub i32` instruction\n    let s_sub = sx - sy;\n    let u_sub = ux - uy;\n\n    // TEST: should create a `mul i32` instruction\n    let s_mul = sx * sy;\n    let u_mul = ux * uy;\n\n    // TEST: should create a `sdiv i32` instruction\n    let s_div = sx / sy;\n    // TEST: should create a `udiv i32` instruction\n    let u_div = ux / uy;\n\n    // TEST: should create a `srem i32` instruction\n    let s_rem = sx % sy;\n    // TEST: should create a `urem i32` instruction\n    let u_rem = ux % uy;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare i32 @get_int()

declare i32 @get_uint()

define {} @test() !dbg !3 {
entry:
  %let_u_rem = alloca i32, align 4
  %let_s_rem = alloca i32, align 4
  %let_u_div = alloca i32, align 4
  %let_s_div = alloca i32, align 4
  %let_u_mul = alloca i32, align 4
  %let_s_mul = alloca i32, align 4
  %let_u_sub = alloca i32, align 4
  %let_s_sub = alloca i32, align 4
  %let_u_add = alloca i32, align 4
  %let_s_add = alloca i32, align 4
  %let_uy = alloca i32, align 4
  %let_ux = alloca i32, align 4
  %let_sy = alloca i32, align 4
  %let_sx = alloca i32, align 4
  %call = call i32 @get_int(), !dbg !8
  store i32 %call, ptr %let_sx, align 4, !dbg !11
  %call1 = call i32 @get_int(), !dbg !12
  store i32 %call1, ptr %let_sy, align 4, !dbg !13
  %call2 = call i32 @get_uint(), !dbg !14
  store i32 %call2, ptr %let_ux, align 4, !dbg !15
  %call3 = call i32 @get_uint(), !dbg !16
  store i32 %call3, ptr %let_uy, align 4, !dbg !17
  %load = load i32, ptr %let_sx, align 4, !dbg !18
  %load4 = load i32, ptr %let_sy, align 4, !dbg !19
  %add = add i32 %load, %load4, !dbg !19
  store i32 %add, ptr %let_s_add, align 4, !dbg !20
  %load5 = load i32, ptr %let_ux, align 4, !dbg !21
  %load6 = load i32, ptr %let_uy, align 4, !dbg !22
  %add7 = add i32 %load5, %load6, !dbg !22
  store i32 %add7, ptr %let_u_add, align 4, !dbg !23
  %load8 = load i32, ptr %let_sx, align 4, !dbg !24
  %load9 = load i32, ptr %let_sy, align 4, !dbg !25
  %sub = sub i32 %load8, %load9, !dbg !25
  store i32 %sub, ptr %let_s_sub, align 4, !dbg !26
  %load10 = load i32, ptr %let_ux, align 4, !dbg !27
  %load11 = load i32, ptr %let_uy, align 4, !dbg !28
  %sub12 = sub i32 %load10, %load11, !dbg !28
  store i32 %sub12, ptr %let_u_sub, align 4, !dbg !29
  %load13 = load i32, ptr %let_sx, align 4, !dbg !30
  %load14 = load i32, ptr %let_sy, align 4, !dbg !31
  %mul = mul i32 %load13, %load14, !dbg !31
  store i32 %mul, ptr %let_s_mul, align 4, !dbg !32
  %load15 = load i32, ptr %let_ux, align 4, !dbg !33
  %load16 = load i32, ptr %let_uy, align 4, !dbg !34
  %mul17 = mul i32 %load15, %load16, !dbg !34
  store i32 %mul17, ptr %let_u_mul, align 4, !dbg !35
  %load18 = load i32, ptr %let_sx, align 4, !dbg !36
  %load19 = load i32, ptr %let_sy, align 4, !dbg !37
  %div = sdiv i32 %load18, %load19, !dbg !37
  store i32 %div, ptr %let_s_div, align 4, !dbg !38
  %load20 = load i32, ptr %let_ux, align 4, !dbg !39
  %load21 = load i32, ptr %let_uy, align 4, !dbg !40
  %div22 = udiv i32 %load20, %load21, !dbg !40
  store i32 %div22, ptr %let_u_div, align 4, !dbg !41
  %load23 = load i32, ptr %let_sx, align 4, !dbg !42
  %load24 = load i32, ptr %let_sy, align 4, !dbg !43
  %rem = srem i32 %load23, %load24, !dbg !43
  store i32 %rem, ptr %let_s_rem, align 4, !dbg !44
  %load25 = load i32, ptr %let_ux, align 4, !dbg !45
  %load26 = load i32, ptr %let_uy, align 4, !dbg !46
  %rem27 = urem i32 %load25, %load26, !dbg !46
  store i32 %rem27, ptr %let_u_rem, align 4, !dbg !47
  ret {} zeroinitializer, !dbg !48
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 4, type: !4, scopeLine: 4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 5, column: 14, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 4, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 4, column: 11)
!11 = !DILocation(line: 5, column: 9, scope: !9)
!12 = !DILocation(line: 6, column: 14, scope: !9)
!13 = !DILocation(line: 6, column: 9, scope: !9)
!14 = !DILocation(line: 7, column: 14, scope: !9)
!15 = !DILocation(line: 7, column: 9, scope: !9)
!16 = !DILocation(line: 8, column: 14, scope: !9)
!17 = !DILocation(line: 8, column: 9, scope: !9)
!18 = !DILocation(line: 11, column: 17, scope: !9)
!19 = !DILocation(line: 11, column: 22, scope: !9)
!20 = !DILocation(line: 11, column: 9, scope: !9)
!21 = !DILocation(line: 12, column: 17, scope: !9)
!22 = !DILocation(line: 12, column: 22, scope: !9)
!23 = !DILocation(line: 12, column: 9, scope: !9)
!24 = !DILocation(line: 15, column: 17, scope: !9)
!25 = !DILocation(line: 15, column: 22, scope: !9)
!26 = !DILocation(line: 15, column: 9, scope: !9)
!27 = !DILocation(line: 16, column: 17, scope: !9)
!28 = !DILocation(line: 16, column: 22, scope: !9)
!29 = !DILocation(line: 16, column: 9, scope: !9)
!30 = !DILocation(line: 19, column: 17, scope: !9)
!31 = !DILocation(line: 19, column: 22, scope: !9)
!32 = !DILocation(line: 19, column: 9, scope: !9)
!33 = !DILocation(line: 20, column: 17, scope: !9)
!34 = !DILocation(line: 20, column: 22, scope: !9)
!35 = !DILocation(line: 20, column: 9, scope: !9)
!36 = !DILocation(line: 23, column: 17, scope: !9)
!37 = !DILocation(line: 23, column: 22, scope: !9)
!38 = !DILocation(line: 23, column: 9, scope: !9)
!39 = !DILocation(line: 25, column: 17, scope: !9)
!40 = !DILocation(line: 25, column: 22, scope: !9)
!41 = !DILocation(line: 25, column: 9, scope: !9)
!42 = !DILocation(line: 28, column: 17, scope: !9)
!43 = !DILocation(line: 28, column: 22, scope: !9)
!44 = !DILocation(line: 28, column: 9, scope: !9)
!45 = !DILocation(line: 30, column: 17, scope: !9)
!46 = !DILocation(line: 30, column: 22, scope: !9)
!47 = !DILocation(line: 30, column: 9, scope: !9)
!48 = !DILocation(line: 31, column: 1, scope: !9)
