compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__pointer_deref_in_expr_position.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn test() -> i32 {\n    let x: *i32;\n\n    // TEST: should load twice, once to read the value of `x` and once to read what\n    // it points to\n    return *x;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i32 @test() !dbg !3 {
entry:
  %let_x = alloca ptr, align 8
  call void @llvm.dbg.declare(metadata ptr %let_x, metadata !8, metadata !DIExpression()), !dbg !12
  %load = load ptr, ptr %let_x, align 8, !dbg !13
  %load1 = load i32, ptr %load, align 4, !dbg !13
  ret i32 %load1, !dbg !13
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !7)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32")
!7 = !{!8}
!8 = !DILocalVariable(name: "x", scope: !9, file: !2, line: 2, type: !11)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 1, column: 18)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 18)
!11 = !DIDerivedType(tag: DW_TAG_pointer_type, name: "\22i32\22", baseType: !6, dwarfAddressSpace: 0)
!12 = !DILocation(line: 2, column: 9, scope: !9)
!13 = !DILocation(line: 6, column: 13, scope: !9)
