compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__struct_property_access_in_expr_position.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "struct S { x: i32, y: i32 }\nfn take_int(x: i32);\n\nfn test() {\n    let x: S;\n\n    // TEST: should GEP into `x` to get the second property (`y`) and then\n    // load that value and call take_int\n    take_int(x.y);\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare {} @take_int(i32)

define {} @test() !dbg !3 {
entry:
  %let_x = alloca { i32, i32 }, align 8
  %gep = getelementptr inbounds nuw { i32, i32 }, ptr %let_x, i32 0, i32 1, !dbg !8
  %load = load i32, ptr %gep, align 4, !dbg !8
  %call = call {} @take_int(i32 %load), !dbg !8
  ret {} zeroinitializer, !dbg !11
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 4, type: !4, scopeLine: 4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 9, column: 14, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 4, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 4, column: 11)
!11 = !DILocation(line: 10, column: 1, scope: !9)
