compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__typed_integers_generate_properly.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "fn test() -> i8 {\n    // TEST: returns `i8`\n    return 4i8;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i8 @test() !dbg !3 {
entry:
  ret i8 4, !dbg !7
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i8")
!7 = !DILocation(line: 3, column: 12, scope: !8)
!8 = distinct !DILexicalBlock(scope: !9, file: !2, line: 1, column: 17)
!9 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 17)
